--- a/index.html
+++ b/index.html
@@ -142,16 +142,14 @@ wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,4
         <div class="recent_gallery-container3">
             <div class="gallery-item"><img src="boltage_Page 1.jpg" alt="Logo Design 1"></div>
             <div class="gallery-item"><img src="boltage_Page 2.jpg" alt="Logo Design 2"></div>
-            <div class="gallery-item"><img src="boltage_Page 3.jpg.jpg" alt="Logo Design 3"></div>
+            <div class="gallery-item"><img src="boltage_Page 3.jpg" alt="Logo Design 3"></div>
             <div class="gallery-item"><img src="boltage_Page 4.jpg" alt="Logo Design 3"></div>
             <div class="gallery-item"><img src="boltage page 5.jpg" alt="Logo Design 3"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 7.jpg" alt="Logo Design 3"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 1.jpg" alt="Logo Design 1"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 2.jpg" alt="Logo Design 2"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 3.jpg" alt="Logo Design 3"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 4.jpg" alt="Logo Design 3"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 5.jpg" alt="Logo Design 3"></div>
-            <div class="gallery-item"><img src="sombre energy_Page 7.jpg" alt="Logo Design 3"></div>
+             <div class="gallery-item"><img src="boltage_Page 1.jpg" alt="Logo Design 1"></div>
+            <div class="gallery-item"><img src="boltage_Page 2.jpg" alt="Logo Design 2"></div>
+            <div class="gallery-item"><img src="boltage_Page 3.jpg" alt="Logo Design 3"></div>
+            <div class="gallery-item"><img src="boltage_Page 4.jpg" alt="Logo Design 3"></div>
+            <div class="gallery-item"><img src="boltage page 5.jpg" alt="Logo Design 3"></div>
 
             <div class="gallery-item"><img src="saul1.jpg" alt="Logo Design 5"></div>
 
